syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "api/commands/command.proto";
import "google/protobuf/empty.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/commandhandler";

package commandhandler;

// API of the Monoskope CommandHandler.
service CommandHandler {
  // Executes a command and returns the execution result
  rpc Execute(commands.Command) returns (google.protobuf.Empty);
}
